crates/rolldown/tests/rolldown/errors/missing_export_ts/main.ts
import dc_def, { bar as dc } from "./foo";

export default [dc_def, dc];
